// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LNURL Resolvers getBitcoinPrice failure 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: ProblemWithdrawingFromLnUrlService],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`LNURL Resolvers getBitcoinPrice success 1`] = `
Object {
  "data": Object {
    "lnUrlWithdraw": "requestId",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
